--- a/public/headerValues.yaml
+++ b/public/headerValues.yaml
@@ -1,7 +1,11 @@
 navItems:
   - href: '#about'
     label: 'About'
-  - href: '#projects'
-    label: 'Projects'
+  - href: '#carreer'
+    label: 'Carreer'
+  - href: '#blog'
+    label: 'Blog'
+  - href: '#resume'
+    label: 'Resume'
   - href: '#contact'
     label: 'Contact'
